--- a/index.html
+++ b/index.html
@@ -7,7 +7,32 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Discord</title>
 </head>
-<body>
+<body class="debug">
+    <!--Header-->
+    <header>
+        <div class="hparte1">
+            <div class="titoli">
+                <div class="titolino logo">Logo</div>
+                <nav class="titolone">
+                    <a href="link">link</a>
+                    <a href="link">link</a>
+                    <a href="link">link</a>
+                    <a href="link">link</a>
+                </nav>
+                <div class="titolino login">login</div>
+            </div>
+        </div>
+        <div class="hparte2"></div>
+    </header>
+    <!--fineHeader-->
+
+    <!--Main-->
+    <main></main>
+    <!--fine Main-->
+
+    <!--Footer-->
+    <footer></footer>
+    <!--fine Footer-->
     
 </body>
 </html>
