--- a/index.html
+++ b/index.html
@@ -22,12 +22,33 @@
                 <div class="titolino login">login</div>
             </div>
         </div>
-        <div class="hparte2"></div>
+        <div class="hparte2">
+            <div class="controsa"></div>
+        </div>
     </header>
     <!--fineHeader-->
 
     <!--Main-->
-    <main></main>
+    <main>
+        <div class="main1">
+            <div class="mb1"></div>
+            <div class="mr1"></div>
+        </div>
+
+        <div class="main2">
+            <div class="mr2"></div>
+            <div class="mb2"></div>
+        </div>
+
+        <div class="main1">
+            <div class="mb3"></div>
+            <div class="mr3"></div>
+        </div>
+
+        <div class="main2">
+            <div class="mv1"></div>
+        </div>
+    </main>
     <!--fine Main-->
 
     <!--Footer-->
