--- a/index.html
+++ b/index.html
@@ -52,7 +52,27 @@
     <!--fine Main-->
 
     <!--Footer-->
-    <footer></footer>
+    <footer>
+        <div class="f1">
+            <div class="bordofooter">
+                <div class="creditsrosa"></div>
+                <div class="creditsblu"></div>
+                <div class="creditsblu"></div>
+                <div class="creditsblu"></div>
+                <div class="creditsblu"></div>
+            </div>
+        </div>
+
+        <div class="f2">
+            <div class="footerfinale">
+                <div class="contenitorefinale">
+                    <div class="logo2">Logo</div>
+                    <div class="bottone">Bottone</div>
+                </div>
+                
+            </div>
+        </div>
+    </footer>
     <!--fine Footer-->
     
 </body>
