--- a/index.html
+++ b/index.html
@@ -14,20 +14,30 @@
     <header>
         <div class="hparte1">
             <div class="titoli">
-                <div class="titolino logo">Logo</div>
+                <div class="titolino logo">
+                    <img src="img/logo.svg" alt="">
+                </div>
                 <nav class="titolone">
                     <ul>
-                        <a href="link">link</a>
-                        <a href="link">link</a>
-                        <a href="link">link</a>
-                        <a href="link">link</a>
+                        <a href="link">Scarica</a>
+                        <a href="link">Perchè Discord</a>
+                        <a href="link">Nitro</a>
+                        <a href="link">Sicurezza</a>
+                        <a href="link">Assistenza</a>
                     </ul>
                 </nav>
-                <div class="titolino login">login</div>
+                <div class="titolino login"><button class="accedi">Accedi</button></div>
             </div>
         </div>
         <div class="hparte2">
-            <div class="controsa"></div>
+            <div class="controsa">
+                <h1 class="slogan">Il tuo posto per parlare</h1>
+                <p class="testoheader">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                <div class="spaziobottoniheader">
+                    <button class="bottoneheader1"><span class="freccina">&#8595;</span>Scarica per Mac</button>
+                    <button class="bottoneheader2">Apri nel tuo browser</button>
+                </div>
+            </div>
         </div>
     </header>
     <!--fineHeader-->
@@ -36,7 +46,10 @@
     <main>
         <div class="main1">
             <div class="mb1"></div>
-            <div class="mr1"></div>
+            <div class="mr1">
+                <h1 class="slogan2">Un luogo ad invito con tutto lo spazio necessario per parlare</h1>
+                <p class="testomain1">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>
         </div>
 
         <div class="main2">
