--- a/index.html
+++ b/index.html
@@ -53,13 +53,19 @@
         </div>
 
         <div class="main2">
-            <div class="mr2"></div>
+            <div class="mr2">
+                <h1 class="slogan2">Dove trovarsi è facile</h1>
+                <p class="testomain1">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
+            </div>
             <div class="mb2"></div>
         </div>
 
         <div class="main1">
-            <div class="mb1"></div>
-            <div class="mr1"></div>
+            <div class="mb3"></div>
+            <div class="mr3">
+                <h1 class="slogan2">Da pochi a un fandom</h1>
+                <p class="testomain1">Dai inizio a una community con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
+            </div>
         </div>
 
         <div class="main3">
