--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
                     <img src="img/logo.svg" alt="">
                 </div>
                 <nav class="titolone">
-                    <ul>
-                        <a href="link">Scarica</a>
-                        <a href="link">Perchè Discord</a>
-                        <a href="link">Nitro</a>
-                        <a href="link">Sicurezza</a>
-                        <a href="link">Assistenza</a>
-                    </ul>
+                    <a href="link">Scarica</a>
+                    <a href="link">Perchè Discord</a>
+                    <a href="link">Nitro</a>
+                    <a href="link">Sicurezza</a>
+                    <a href="link">Assistenza</a>    
                 </nav>
                 <div class="titolino login"><button class="accedi">Accedi</button></div>
             </div>
@@ -69,8 +67,21 @@
         </div>
 
         <div class="main3">
-            <div class="mv1"></div>
+            <div class="mv1">
+                <h1 class="slogan2">Tecnologia affidabile per tenersi in contatto</h1>
+                <div class="contenitoretestomainfinale">
+                    <p class="testomain1 testomainfinale">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                </div>
+                <div class="imgmaincontainer">
+                    <img class="imgmain" src="img/item4-big.svg" alt="">
+                </div>
+                <h1 class="slogan3">Pronto a iniziare la tua nuova avventura?</h1>
+                <div>
+                    <button class="bottoneheader1 blu"><span class="freccina">&#8595;</span>Scarica per Mac</button>
+                </div>
+            </div>
         </div>
+
     </main>
     <!--fine Main-->
 
