--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <title>Discord</title>
 </head>
 
@@ -89,11 +90,64 @@
     <footer>
         <div class="f1">
             <div class="bordofooter">
-                <div class="creditsrosa"></div>
-                <div class="creditsblu"></div>
-                <div class="creditsblu"></div>
-                <div class="creditsblu"></div>
-                <div class="creditsblu"></div>
+
+                <div class="creditsrosa">
+                    <h2 class="slogan4">Il tuo porto per parlare</h2>
+                    <div class="itacontenitore">
+                        <img class="ita" src="img/ita.png" alt=""> Italiano 
+                    </div>
+                    <div class="social">
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>
+                </div>
+
+                <div class="creditsblu">
+                    <ul>
+                        <li class="capolista">Prodotto</li>
+                        <li class="elementolista">Scarica</li>
+                        <li class="elementolista">Perchè discord</li>
+                        <li class="elementolista">Nitro</li>
+                        <li class="elementolista">Sicurezza</li>
+                        <li class="elementolista">Assistenza</li>
+                    </ul>
+                </div>
+                <div class="creditsblu">
+                    <ul>
+                        <li class="capolista">Chi siamo</li>
+                        <li class="elementolista">Lavora con noi</li>
+                        <li class="elementolista">Marchio</li>
+                        <li class="elementolista">Redazione</li>
+                        <li class="elementolista">Negozio</li>
+                    </ul>
+                </div>
+                <div class="creditsblu">
+                    <ul>
+                        <li class="capolista">Risorse</li>
+                        <li class="elementolista">Scarica</li>
+                        <li class="elementolista">Perchè discord</li>
+                        <li class="elementolista">Nitro</li>
+                        <li class="elementolista">Sicurezza</li>
+                        <li class="elementolista">Assistenza</li>
+                        <li class="elementolista">Scarica</li>
+                        <li class="elementolista">Perchè discord</li>
+                        <li class="elementolista">Nitro</li>
+                        <li class="elementolista">Sicurezza</li>
+                        <li class="elementolista">Assistenza</li>
+                    </ul>
+                </div>
+                <div class="creditsblu">
+                    <ul>
+                        <li class="capolista">Prodotto</li>
+                        <li class="elementolista">Scarica</li>
+                        <li class="elementolista">Perchè discord</li>
+                        <li class="elementolista">Nitro</li>
+                        <li class="elementolista">Sicurezza</li>
+                        <li class="elementolista">Assistenza</li>
+                    </ul>
+                </div>
             </div>
         </div>
 
