--- a/index.html
+++ b/index.html
@@ -154,8 +154,11 @@
         <div class="f2">
             <div class="footerfinale">
                 <div class="contenitorefinale">
-                    <div class="logo2">Logo</div>
-                    <div class="bottone">Bottone</div>
+                    <div class="logo2"></div>
+                    
+                    <div class="bottone">
+                        <button class="accedi">Registrati</button>
+                    </div>
                 </div>
 
             </div>
